# trinity-templates

./: README.md
cpp_cmake/: trinity.yaml
cpp_cmake/templates/base/: CMakeLists.txt
linarcx_cpp_cmake/: trinity.yaml
linarcx_qtquick/: trinity.yaml
linarcx_qtquick/templates/app/: CMakeLists.txt  qml.qrc
linarcx_qtquick/templates/app/appconf/: {[project_name]}.desktop
linarcx_qtquick/templates/app/modules/core/dispatcher/: dispatcher.cpp
linarcx_qtquick/templates/app/modules/pages/: main.qml
linarcx_qtquick/templates/app/modules/pages/settings/presenter/: settingsMacro.h
linarcx_qtquick_2/: trinity.yaml
linarcx_qtquick_2/templates/app/: CMakeLists.txt  qml.qrc  {[PROJECT_NAME]}.pro
linarcx_qtquick_2/templates/app/appconf/: qtquickcontrols2.conf  {[PROJECT_NAME]}.desktop
linarcx_qtquick_2/templates/app/modules/core/: main.cpp
linarcx_qtquick_2/templates/app/modules/core/dispatcher/: dispatcher.cpp  dispatcher.h  dispatcherMacro.h
linarcx_qtquick_2/templates/app/modules/pages/launcher/presenter/: launcher.cpp  launcher.h  launcherMacro.h
linarcx_qtquick_2/templates/app/modules/pages/launcher/view/: launcher.qml
linarcx_qtquick_2/templates/app/modules/pages/settings/presenter/: settings.cpp  settings.h  settingsMacro.h
linarcx_qtquick_2/templates/app/modules/pages/settings/view/: Settings.qml
linarcx_qtquick_2/templates/app/translations/: persian.qm  persian.ts
linarcx_qtquick_2/templates/app/util/cpp/: ConvertUtil.cpp  ConvertUtil.h  FileUtil.cpp  FileUtil.h  FormatUtil.cpp  FormatUtil.h  QtUtil.cpp  QtUtil.h  utils.cpp  utils.h  utilsMacro.h
linarcx_qtquick_2/templates/app/util/fonts/Hack/: Hack.qml  qmldir
linarcx_qtquick_2/templates/app/util/fonts/fontawesome/: Awesome.qml  qmldir
linarcx_qtquick_2/templates/app/util/js/: Constants.js
linarcx_qtquick_2/templates/app/util/qml/: LinArcxDialog.qml  LinarcxButton.qml  LinarcxCardView.qml  LinarcxImageToolTiper.qml  LinarcxNotif.qml  LinarcxToolTip.qml  Theme.qml
linarcx_qtquick_2/templates/app/util/qml/+fusion/: LinarcxButton.qml
linarcx_qtquick_2/templates/app/util/qml/+imagine/: LinarcxButton.qml  Theme.qml
linarcx_qtquick_2/templates/app/util/qml/+material/: LinarcxButton.qml
linarcx_qtquick_2/templates/app/util/qml/+universal/: LinarcxButton.qml
